2015-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Don't get control channel from an already 
	redirected file descriptor, get it from the filename of a FIFO 
	passed on the command line.  #define _XOPEN_SOURCE as 500 to 
	expose prototype of "ptsname" under NetBSD 6.1.4.
	* info/t/Init-inter.inc: Create control channel FIFO and pass 
	name of it to pseudotty.  Don't use background processes to keep 
	the control FIFO open.  Redirect FIFO for communicating name of 
	pty slave device within a subshell.  Keep control FIFO open 
	using file descriptor redirection in main shell process.
	* info/t/Init-test.inc: Remove unneeded cleanup code.
	* info/t/Timeout-test.inc: Don't try to open FIFO for indicating 
	that ginfo has finished read-write.

2015-06-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* README-hacking: mention OpenCSW build reports

2015-06-03  Karl Berry  <karl@freefriends.org>

	* AUTHORS (Robbins, Smith): add.
	* README-hacking: mention TeX by Topic, TeX for the Impatient,
	and texiwebjr.

2015-06-02  Karl Berry  <karl@freefriends.org>

	* po_document/Makevars (PACKAGE_GNU, MSGINIT_OPTIONS,
	PO_DEPENDS_ON_POT, DIST_DEPENDS_ON_UPDATE_PO): new variables,
	as with po/Makevars a couple days ago.

2015-06-02  Karl Berry  <karl@freefriends.org>

	* texindex/ti.twjr (Seen): re-initialize for each output file,
	so a duplicated index entry is kept if it's in a different index.
	Doc: discuss @ vs. \ as command character; indexing updates.
	* doc/texinfo.texi (Details of texindex): a bit more about twjr.
	
	* doc/texinfo.tex (\lastsection): define as empty in case
	a sub(sub)heading occurs out of sequence.

2015-05-31  Karl Berry  <karl@freefriends.org>

	* configure.ac (AC_INIT): prepare for 5.993 pretest.

2015-05-31  Karl Berry  <karl@freefriends.org>

	* texindex/ti.twjr (version): use printf for year.

2015-05-31  Karl Berry  <karl@freefriends.org>

	* po/Makefile.in.in ($(DOMAIN).pot-update): invoke xgettext a