@@ -93,6 +93,11 @@ dtd-check:
 	&& rm -f $@-1
 
 # emacs-page
+# just for convenience:
+update-po:
+	cd $(srcdir)/po && $(MAKE) update-po
+	cd $(srcdir)/po_document && $(MAKE) update-po
+
 # From coreutils.  Use when making a release.
 # Verify that all source files using _() are listed in po/POTFILES.in.
 # Run this before making pretests, as well as official releases, so that
