@@ -134,7 +134,7 @@ util/srclist-txi          # for pretest
 pod2man Pod-Simple-Texinfo/pod2texi.pl >man/pod2texi.1 # until we fix deps
 make
 make po-check             # update po/POTFILES.in as needed
-make -C po update-po      # but don't commit yet, dist updates po_document
+make update-po            # both po and po_document needed, build a dist first
 make -C doc wwwdoc-build  # and -install for official (and eventual commit)
 make long-checks          # distcheck does not do this
 (export MALLOC_CHECK_=2; make distcheck)  # repeat until clean
