@@ -26,7 +26,7 @@ CLEANFILES = texindex
 # and mention the original sources explicitly.
 EXTRA_DIST = texindex.in ti.twjr
 
-# we'll put the awk script in $(sharedir)/texinfo.
+# let's install the awk script in $(sharedir)/texinfo.
 dist_pkgdata_SCRIPTS = texindex.awk
 
 # since we generate it, have to clean it (at maintainer-clean) explicitly.
@@ -54,7 +54,6 @@ texindex: texindex.in Makefile
 # build texindex.awk from ti.twjr using jrtangle; that creates
 # texindex.awk (hardwired).  Then we substitute configure-time variables
 # to avoid manual updates of the version number.
-# 
 texindex.awk: ti.twjr
 	$(AWK) -f $(srcdir)/jrtangle $(srcdir)/ti.twjr || rm -f texindex.awk
 	$(do_subst) <texindex.awk >texindex.awk-tmp
@@ -68,8 +67,7 @@ ti.info: ti.texi
 ti.html: ti.texi
 	makeinfo --no-split --html ti.texi -o ti.html
 
-# unlink jrtangle, jrweave outputs to stdout; and we want the
-# usual UPDATED string.
+# unlike jrtangle, jrweave outputs to stdout; use the usual UPDATED string.
 ti.texi: ti.twjr
 	UPDATED=`$(top_srcdir)/build-aux/mdate-sh $(srcdir)/ti.twjr`; \
 	  $(AWK) -f $(srcdir)/jrweave $(srcdir)/ti.twjr \
